--- a/Patches/ionEngine.cfg
+++ b/Patches/ionEngine.cfg
@@ -2,8 +2,12 @@
 {
 	@MODULE[ModuleEngines]
 	{
-		%name = LowThrustEngine
-		%maxThrust = 0.001
-		%resourceDeltaV = XenonGas
+		%name = PersistentEngine
+		%maxThrust = 0.00025 // 0.25 N like Dawn. Originally 2 kN.
+		%resourceDeltaV = XenonGas // Resource used for deltaV
+		@PROPELLANT[ElectricCharge]
+		{
+			%ratio = 14400 // Originally 1.8. x8000 to make up for maxThrust reduction.
+		}
 	}
 }
