Changed comment to correct real-world ion engine

--- a/Patches/ionEngine.cfg
+++ b/Patches/ionEngine.cfg
@@ -3,7 +3,7 @@
 	@MODULE[ModuleEngines]
 	{
 		%name = PersistentEngine
-		%maxThrust = 0.00025 // 0.25 N like Dawn. Originally 2 kN.
+		%maxThrust = 0.00025 // 0.25 N like NASA's NEXT. Originally 2 kN.
 		%resourceDeltaV = XenonGas // Resource used for deltaV
 		@PROPELLANT[ElectricCharge]
 		{
