--- a/Patches/ionEngine.cfg
+++ b/Patches/ionEngine.cfg
@@ -2,12 +2,14 @@
 {
 	@MODULE[ModuleEngines]
 	{
-		%name = PersistentEngine
 		%maxThrust = 0.00025 // 0.25 N like NASA's NEXT. Originally 2 kN.
-		%resourceDeltaV = XenonGas // Resource used for deltaV
 		@PROPELLANT[ElectricCharge]
 		{
 			%ratio = 14400 // Originally 1.8. x8000 to make up for maxThrust reduction.
 		}
+	}
+	MODULE
+	{
+		name = PersistentEngine
 	}
 }
