ionEngine module name changed to ModuleEnginesFX. Patch for reduced thrust updated.

--- a/Patches/ionEngine.cfg
+++ b/Patches/ionEngine.cfg
@@ -1,6 +1,6 @@
 @PART[ionEngine]
 {
-	@MODULE[ModuleEngines]
+	@MODULE[ModuleEnginesFX]
 	{
 		%maxThrust = 0.00025 // 0.25 N like NASA's NEXT. Originally 2 kN.
 		@PROPELLANT[ElectricCharge]
